# afg2225-sequencer

./: .gitignore  LICENSE  README.md  example_PyQt.py  live_control.py  main.py  pyproject.toml  sequencer_GUI.py  sequencer_GUI.spec  setup.py
afg2225library/: AFG2225.py
old_examples/: example.py
