[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afg2225-library"
version = "0.2.0"
description = "Python library and dynamic GUI to control arbitrary function generator GW Instek AFG-2225 via USB."
readme = "README.md"
authors = [
    { name = "Luis Groß", email = "luis.gross.privat@gmail.com" }
]
license = { text = "GNU 3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
# Hier werden alle benötigten Abhängigkeiten fest für das Projekt hinterlegt
dependencies = [
    "pyvisa",
    "pyvisa-py",
    "pyusb",
    "matplotlib",
    "numpy",
    "pyserial>=3.5",
    "pyqt6>=6.11.0",
]

[tool.setuptools]
packages = ["afg2225library"]
